--- a/app/views/caseaccess/pages/IAC-tr-case.html
+++ b/app/views/caseaccess/pages/IAC-tr-case.html
@@ -38,7 +38,7 @@ Case details
                 <td class="govuk-table__cell">To be added</td>
               </tr>
               <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Any applicable case references</th>
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Applicable case references</th>
                 <td class="govuk-table__cell">To be added</td>
               </tr>
 
@@ -72,7 +72,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/IAC-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request
+              Reject and request more information
             </label>
           </div>
         </div>
