--- a/app/views/caseaccess/pages/IACs-request.html
+++ b/app/views/caseaccess/pages/IACs-request.html
@@ -40,13 +40,13 @@ Case details
 
     {{ govukInput({
       label: {
-        html: 'Any applicable case references<span class="govuk-visually-hidden"></span>'
+        html: 'Applicable case references<span class="govuk-visually-hidden"></span>'
       },
       classes: "govuk-!-width-two-thirds",
       id: "case ref",
       name: "case-ref",
       hint: {
-        text: ""
+        text: "For example: FamilyMan ref. CCD ref."
  }
     }) }}
 
