--- a/app/views/caseaccess/pages/myaccess-IACs-grr.html
+++ b/app/views/caseaccess/pages/myaccess-IACs-grr.html
@@ -76,8 +76,8 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">13/04/2021</td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Access denied</td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Not granted</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="IACs-tcrvd" class="right_m">View</a></td>
 
