--- a/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
@@ -76,8 +76,8 @@ My work
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>13/04/2021</strong></td>
-                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Access denied</strong></td>
+                  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Not granted</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong></strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >&nbsp;&nbsp;&nbsp;<a href="SSCSs-tcrvd" class="right_m">View</a></td>
 
