--- a/app/views/caseaccess/pages/SSCS-trr-case.html
+++ b/app/views/caseaccess/pages/SSCS-trr-case.html
@@ -37,11 +37,15 @@ Case details
         text: "Based on the information you have provided, I do not believe that it is appropriate for you to gain access to this case"
       },
 
+      {
+        value: "email",
+        text: "You have not supplied enough information, please re-submit with more details"
+      },
 
 
         {
           value: "other",
-          text: "You have not supplied enough information, please re-submit with the following details",
+          text: "Other - please provide the following information:",
           conditional: {
             html: textHtml
           }
