--- a/app/views/caseaccess/pages/SSCSs-tcrvd.html
+++ b/app/views/caseaccess/pages/SSCSs-tcrvd.html
@@ -27,7 +27,7 @@ Case details
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
                 <td class="govuk-table__cell">13/04/2021  </td>
               </tr>
-              <tr class="govuk-table__row">
+          <!--    <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Your current role and juristiction</th>
                 <td class="govuk-table__cell">To be added</td>
               </tr>
@@ -40,10 +40,10 @@ Case details
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Length of access</th>
                 <td class="govuk-table__cell">2 weeks</td>
               </tr>
-
+-->
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
-                <td class="govuk-table__cell">To be added</td>
+                <td class="govuk-table__cell">The parties on the case are linked to a current case I'm working on. I'd like access for 3 weeks. Thanks!</td>
               </tr>
             </tbody>
           </table>
@@ -62,7 +62,7 @@ Case details
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
                 <td class="govuk-table__cell">
-You have not supplied enough information, please provide your role on the case, any related case reference numbers and more details on .... contact me to discuss further.       </tr>
+You have not supplied enough information, can you provide your current case role and case reference number including parties details. Please contact me or the case team to discuss further.       </tr>
             </tbody>
           </table>
         </div>
