--- a/app/views/caseaccess/pages/IAC-tr-case.html
+++ b/app/views/caseaccess/pages/IAC-tr-case.html
@@ -32,7 +32,7 @@ Case details
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
                 <td class="govuk-table__cell">Arnold McKeever</td>
               </tr>
-
+<!--
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Requester role and juristiction</th>
                 <td class="govuk-table__cell">To be added</td>
@@ -46,10 +46,11 @@ Case details
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Length of access</th>
                 <td class="govuk-table__cell">2 weeks</td>
               </tr>
+              -->
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
                 <td class="govuk-table__cell">
-	To be added          </tr>
+The parties on the case are linked to a current case I'm working on. I'd like access for 3 weeks. Thanks!         </tr>
             </tbody>
           </table>
         </div>
@@ -72,7 +73,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/IAC-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject and request more information
+              Reject request / request more information
             </label>
           </div>
         </div>
