--- a/app/views/caseaccess/pages/IACs-request.html
+++ b/app/views/caseaccess/pages/IACs-request.html
@@ -46,7 +46,7 @@ Case details
     text: "Provide clear rational with supporting information"
   },
   hint: {
-    text: "For example. Your current role and juristiction any applicable case references and the length of time you need case access."
+    text: "Include your current role and juristiction any applicable case references and the length of time you need case access."
   }
 }) }}
 
