--- a/app/views/caseaccess/pages/SSCSs.html
+++ b/app/views/caseaccess/pages/SSCSs.html
@@ -21,12 +21,12 @@ Case details
         </svg>
         <div class="hmcts-banner__message">
           <span class="hmcts-banner__assistive">information</span>
-This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
+This case requires specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
 </div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-            <h1 class="govuk-heading-xl">IA/56765/2021</h1>
+            <h1 class="govuk-heading-xl">4321456798766789</h1>
           </div>
         </div>
       </div>
