--- a/app/views/caseaccess/pages/IAC-tr-case.html
+++ b/app/views/caseaccess/pages/IAC-tr-case.html
@@ -30,7 +30,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Arnold McKeever</td>
+                <td class="govuk-table__cell">Arnold McKeever<br>Senior tribunal caseworker - Public Law</td>
               </tr>
 <!--
               <tr class="govuk-table__row">
@@ -73,7 +73,7 @@ The parties on the case are linked to a current case I'm working on. I'd like ac
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/IAC-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request / request more information
+              Reject request
             </label>
           </div>
         </div>
