--- a/app/views/caseaccess/pages/IACs-tcrvd-bkup.html
+++ b/app/views/caseaccess/pages/IACs-tcrvd-bkup.html
@@ -1,4 +1,6 @@
 
+
+
 {% if  data.usertype == 'judiciary'   %}
     {% extends "../layoutjudicial.html" %}
 {% else %}
@@ -8,59 +10,67 @@
 Case details
 {% endblock %}
 {% block beforeContent %}
-<a href="/caseaccess/pages/myaccess-IACs-grr" class="govuk-back-link">Back</a>
+<a href="/caseaccess/pages/IAC-tr-case" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-          <h1 class="govuk-heading-l  govuk-!-margin-bottom-2"> Review your case access request and decision </h1>
-        <!--    <h2 class="govuk-heading-m">Review your access request and decision</h2> -->
-          <p class="govuk-body">Check the details of your case access request.</p>
-          <table class="govuk-table">
-            <tbody class="govuk-table__body">
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Case name</th>
-                <td class="govuk-table__cell">Amelia Chu</td>
-              </tr>
-<!--
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Role requested</th>
-                <td class="govuk-table__cell">(I think this this covered by Purpose)</td>
-              </tr> -->
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
-                <td class="govuk-table__cell">29/03/2021 </td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for case access</th>
-                <td class="govuk-table__cell">To view details of the other case linked to the parties/family on my current case.</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Access decision</th>
-                <td class="govuk-table__cell">Rejected by Samuel Brown</td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Decision date</th>
-                <td class="govuk-table__cell">31/03/2021 </td>
-              </tr>
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
-                <td class="govuk-table__cell">
-You have not supplied enough information, please contact me to discuss further.       </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-  <div class="govuk-button-group"><!--
+{% set textHtml %}
+{{ govukTextarea({
+  name: "more-detail",
+  id: "more-detail"
+}) }}
+{% endset -%}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+{{ govukRadios({
+  idPrefix: "contact",
+  name: "contact",
+  fieldset: {
+    legend: {
+      text: "Reject specific access request",
+      isPageHeading: true,
+      classes: "govuk-fieldset__legend--l"
+    }
+  },
+  hint: {
+    text: "Select one reason. This reason will be sent to the person requesting access to the case."
+  },
+  items: [
+  {
+    value: "email",
+    text: "Based on the information you have provided, I do not believe that it is appropriate for you to gain access to this case"
+  },
+
+  {
+    value: "email",
+    text: "You have not supplied enough information, please re-submit with more details"
+  },
+
+
+    {
+      value: "other",
+      text: "Other - please provide the following information:",
+      conditional: {
+        html: textHtml
+      }
+    }
+  ]
+}) }}
+<div class="govuk-button-group">
 {{ govukButton({
-    text: "Request access again",
-    href: "/caseaccess/pages/PA-00467-2017",
-    classes: "govuk-!-margin-right-3"
-  }) }}
- <p><a class="govuk-body" href="PA-00467-2017-tac">Cancel</a></p> -->
-
-
+  text: "Submit",
+  classes: "govuk-!-margin-right-3",
+  href: "/caseaccess/pages/IAC-trrc-case"
+}) }}
+<!--
+{{ govukButton({
+  text: "Cancel and unassign task",
+  href: "/caseaccess/pages/PA-00467-2017-t",
+  classes: "govuk-button--secondary"
+}) }}
+-->
+<p><a class="govuk-body" href="IAC-tac">Cancel</a></p>
 </div>
 
-
+</div>
+</div>
 {% endblock %}
