--- a/app/views/caseaccess/pages/IACs.html
+++ b/app/views/caseaccess/pages/IACs.html
@@ -21,7 +21,7 @@ Case details
         </svg>
         <div class="hmcts-banner__message">
           <span class="hmcts-banner__assistive">information</span>
-This case has specific access.<br>This means it requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
+This case requires specific access.<br>This means it’s outside your jurisdiction and requires authorisation. If you request access to the case, it will be logged for auditing purposes.</div>
 </div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
       <div class="" style="display: flex; justify-content: space-between; ">
