--- a/app/views/caseaccess/pages/SSCS-request.html
+++ b/app/views/caseaccess/pages/SSCS-request.html
@@ -14,7 +14,7 @@ Case details
   </svg>
   <div class="hmcts-banner__message">
     <span class="hmcts-banner__assistive">information</span>
-    This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+    This case requires challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
   </div>
 </div>
 <div class="govuk-grid-row">
@@ -33,7 +33,7 @@ Case details
   spellcheck: false,
   classes: "govuk-!-width-one-third",
   label: {
-    text: "Case ref for example: FamilyMan ref. CCD ref."
+    text: "Case reference, for example 16-digit case reference"
   }
 }) }}
 {% endset -%}
@@ -72,7 +72,7 @@ Case details
 
         {
           value: "other",
-          text: "Other reason (free text)",
+          text: "Other reason",
           conditional: {
             html: textHtml
           }
