--- a/app/views/caseaccess/pages/SSCS.html
+++ b/app/views/caseaccess/pages/SSCS.html
@@ -21,7 +21,7 @@ Case details
       </svg>
       <div class="hmcts-banner__message">
         <span class="hmcts-banner__assistive">information</span>
-        This case has challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
+        This case requires challenged access.<br>This is because the case is outside your work area. If you request access to the case, it will be logged for auditing purposes.
       </div>
     </div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
@@ -46,7 +46,7 @@ Case details
           Service
           </dt>
           <dd class="govuk-summary-list__value">
-            Social Security and Child Support
+            Public law
           </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -54,7 +54,7 @@ Case details
           State
           </dt>
           <dd class="govuk-summary-list__value">
-          Awaiting Evidence
+          Submitted
           </dd>
           </div>
           <div class="govuk-summary-list__row">
@@ -62,7 +62,7 @@ Case details
           Court or hearing centre
           </dt>
           <dd class="govuk-summary-list__value">
-          Bexleyheath Social Security & Child Support Tribunal
+          Watford Family Court
           </dd>
           </div>
 
