--- a/app/views/caseaccess/pages/SSCSs-tcrvd.html
+++ b/app/views/caseaccess/pages/SSCSs-tcrvd.html
@@ -24,9 +24,15 @@ Case details
                 <td class="govuk-table__cell">Amelia Chu</td>
               </tr>
               <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
+                <td class="govuk-table__cell">	PA/00467/2017  </td>
+              </tr>
+              <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
                 <td class="govuk-table__cell">13/04/2021  </td>
               </tr>
+
+
           <!--    <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Your current role and juristiction</th>
                 <td class="govuk-table__cell">To be added</td>
@@ -47,22 +53,22 @@ Case details
               </tr>
             </tbody>
           </table>
-          <h2 class="govuk-heading-m">Rejection details</h2>
+          <h2 class="govuk-heading-m">Rejected request details</h2>
           <table class="govuk-table">
             <tbody class="govuk-table__body">
-
-              <tr class="govuk-table__row">
-                <th scope="row" class="govuk-table__header" style="width: 220px;">Request reviewed by</th>
-                <td class="govuk-table__cell">Samuel Brown<br>Case role or team details</td>
-              </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Decision date</th>
                 <td class="govuk-table__cell">14/04/2021 </td>
               </tr>
               <tr class="govuk-table__row">
+                <th scope="row" class="govuk-table__header" style="width: 220px;">Request reviewed by</th>
+                <td class="govuk-table__cell">Samuel Brown<br>Senior tribunal caseworker - Immigration and Asylum</td>
+              </tr>
+
+              <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Reason for rejection</th>
                 <td class="govuk-table__cell">
-You have not supplied enough information, can you provide your current case role and case reference number including parties details. Please contact me or the case team to discuss further.       </tr>
+You have not supplied enough information, can you provide your current case reference number and party details.        </tr>
             </tbody>
           </table>
         </div>
