--- a/app/views/caseaccess/pages/SSCS-request.html
+++ b/app/views/caseaccess/pages/SSCS-request.html
@@ -61,8 +61,11 @@ Case details
       }
         },
         {
-          value: "phone",
-          text: "To determine if the case needs to be consolidated "
+          value: "email",
+          text: "To determine if the case needs to be consolidated ",
+      conditional: {
+        html: emailHtml
+      }
         },
         {
           value: "email",
