--- a/app/views/caseaccess/pages/SSCS-tr-case.html
+++ b/app/views/caseaccess/pages/SSCS-tr-case.html
@@ -73,7 +73,7 @@ The parties on the case are linked to a current case I'm working on. I'd like ac
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/SSCS-trr-case">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Reject request / request more information
+              Reject request
             </label>
           </div>
         </div>
