bug fix for sscs testing

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -14,7 +14,7 @@
         </h1>
 
 
-        <h2 class="govuk-heading-m">User testing - Starting 31 March 2021</h2>
+        <h2 class="govuk-heading-m">User testing - Starting April 2021</h2>
         <div style="display: flex; margin-top: 10px;">
 
 
