--- a/app/views/searchcases/layoutstaff.html
+++ b/app/views/searchcases/layoutstaff.html
@@ -95,7 +95,7 @@
                 <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style=" width: 500px;">
                     <ul class="hmcts-primary-navigation__list">
                         <li class="hmcts-primary-navigation__item">
-                            <a class="hmcts-primary-navigation__link" href="#">
+                            <a class="hmcts-primary-navigation__link" href="/searchcases/pages/available-tasks-sscs-testing">
                                 My work
                             </a>
                         </li>
