--- a/app/views/caseaccess/pages/IACs-atc.html
+++ b/app/views/caseaccess/pages/IACs-atc.html
@@ -26,7 +26,7 @@ Case details
 
 
     <div>
-      <h1 class="govuk-heading-xl">8574173860385729</h1>
+      <h1 class="govuk-heading-xl">4321456798766789</h1>
     </div>
 
 
@@ -195,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   8574173860385729
+                   4321456798766789
 
                  </dd>
 
@@ -208,7 +208,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    	Lorenzo Hanoi
+                    	Ali Uddin
                  </dd>
 
                </div>
@@ -232,7 +232,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   British
+                   Pushtan
                  </dd>
 
                </div>
