--- a/app/views/caseaccess/pages/SSCS.html
+++ b/app/views/caseaccess/pages/SSCS.html
@@ -25,57 +25,57 @@ Case details
       </div>
     </div>
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
-      <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
-          <h1 class="govuk-heading-xl">5554998867893322</h1>
-          </div>
-          </div>
-          </div>
-          <h2 class="govuk-heading-m">Case details</h2>
-          <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          Case name
-          </dt>
-          <dd class="govuk-summary-list__value">
-          Joanna Burns
-          </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          Service
-          </dt>
-          <dd class="govuk-summary-list__value">
-            Public law
-          </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          State
-          </dt>
-          <dd class="govuk-summary-list__value">
-          Submitted
-          </dd>
-          </div>
-          <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          Court or hearing centre
-          </dt>
-          <dd class="govuk-summary-list__value">
-          Watford Family Court
-          </dd>
-          </div>
+      <div class="" style="display: flex; justify-content: space-between; ">
+        <h1 class="govuk-heading-xl">9872574867365860</h1>
+        </div>
+        </div>
+        </div>
+        <h2 class="govuk-heading-m">Case details</h2>
+        <dl class="govuk-summary-list">
+        <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key summary-key">
+        Case name
+        </dt>
+        <dd class="govuk-summary-list__value">
+        Joanna Burns
+        </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key summary-key">
+        Service
+        </dt>
+        <dd class="govuk-summary-list__value">
+          Social Security and Child Support
+        </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key summary-key">
+        State
+        </dt>
+        <dd class="govuk-summary-list__value">
+        Awaiting Evidence
+        </dd>
+        </div>
+        <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key summary-key">
+        Court or hearing centre
+        </dt>
+        <dd class="govuk-summary-list__value">
+        Bexleyheath Social Security & Child Support Tribunal
+        </dd>
+        </div>
 
 
-          <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key summary-key">
-          Access
-          </dt>
-          <dd class="govuk-summary-list__value">
-          Challenged
-          </dd>
-          </div>
-          </dl>
+        <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key summary-key">
+        Access
+        </dt>
+        <dd class="govuk-summary-list__value">
+        Challenged
+        </dd>
+        </div>
+        </dl>
 
     </div>
     {{ govukButton({
