--- a/app/views/caseaccess/pages/SSCSs-atc.html
+++ b/app/views/caseaccess/pages/SSCSs-atc.html
@@ -26,7 +26,7 @@ Case details
 
 
     <div>
-      <h1 class="govuk-heading-xl">IA/56765/2021</h1>
+      <h1 class="govuk-heading-xl">8574173860385729</h1>
     </div>
 
 
@@ -195,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   IA/56765/2021
+                   8574173860385729
 
                  </dd>
 
@@ -208,7 +208,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    	Ali Uddin
+                    		Lorenzo Hanoi
                  </dd>
 
                </div>
@@ -232,7 +232,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   Pushtan
+                   Spanish
                  </dd>
 
                </div>
