--- a/app/views/caseaccess/testing.html
+++ b/app/views/caseaccess/testing.html
@@ -12,23 +12,27 @@ GOV.UK Prototype Kit
 <div style="display: flex; margin-top: 80px;">
   <div style="width: 1000px;">
 
-    <h2 class="govuk-heading-m">TASK 6<br><span style="color: #f47738">(SSCS USER)</span> Challenged access request</h2>
-
+    <h2 class="govuk-heading-m">TASK 5<br><span style="color: #f47738">(SSCS USER)</span> Challenged access request</h2>
     <p><a target="_blank" href="/caseaccess/pages/SSCS?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
-  <h2 class="govuk-heading-m">TASK 7<br> <span style="color: 	#912b88">(IAC USER)</span> Specifc access request</h2>
 
-    <p><a target="_blank" href="/caseaccess/pages/IACs?usertype=staff&">Case details</a><br> Specifc access - Flow request</br></p>
-    <h2 class="govuk-heading-m">TASK 7<br><span style="color: #f47738">(SSCS USER)</span> Specifc access request</h2>
 
+    <h2 class="govuk-heading-m">TASK 5<br><span style="color: #912b88">(FAMILY USER)</span> Challenged access request</h2>
+    <p><a target="_blank" href="/caseaccess/pages/IAC?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
+    <h2 class="govuk-heading-m">TASK 6<br><span style="color: #f47738">(SSCS USER)</span> Specifc access request</h2>
     <p><a target="_blank" href="/caseaccess/pages/SSCSs?usertype=staff&">Case details</a><br>Specifc access - Flow request</br></p>
+  <h2 class="govuk-heading-m">TASK 6<br> <span style="color: 	#912b88">(FAMILY USER)</span> Specifc access request</h2>
+<p><a target="_blank" href="/caseaccess/pages/IACs?usertype=staff&">Case details</a><br> Specifc access - Flow request</br></p>
 
-    <h2 class="govuk-heading-m">Task 8 <br><span style="color: 	#912b88">(IAC APPROVER)</span> Review request <br> from AVAILABLE TASKS</h2>
 
-    <p><a target="_blank" href="/caseaccess/pages/available-tasks-IAC-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow approve</p>
+
 
     <h2 class="govuk-heading-m">Task 8 <br><span style="color: #f47738">(SSCS APPROVER)</span> Review request <br> from AVAILABLE TASKS</h2>
 
     <p><a target="_blank" href="/caseaccess/pages/available-tasks-SSCS-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow approve</p>
+    <h2 class="govuk-heading-m">Task 8 <br><span style="color: 	#912b88">(FAMILY APPROVER)</span> Review request <br> from AVAILABLE TASKS</h2>
+
+    <p><a target="_blank" href="/caseaccess/pages/available-tasks-IAC-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow approve</p>
+
   </div>
 </div>
 </div>
