--- a/app/views/caseaccess/pages/IACs-request.html
+++ b/app/views/caseaccess/pages/IACs-request.html
@@ -19,16 +19,13 @@ Case details
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-
-
     <div class="govuk-form-group">
       <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="more-detail">
           Why do you need to access this case?
         </label>
       </h1>
       <div id="more-detail-hint" class="govuk-body">
-        You should give a reason and also include:
+        You should give a brief reason and include:
       </div>
       <ul class="govuk-list govuk-list--bullet">
 <li>the case reference</li>
