--- a/app/views/caseaccess/pages/SSCSs-request.html
+++ b/app/views/caseaccess/pages/SSCSs-request.html
@@ -19,7 +19,6 @@ Case details
 </div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
 <!--
     {{ govukInput({
       label: {
@@ -95,7 +94,7 @@ Case details
         </label>
       </h1>
       <div id="more-detail-hint" class="govuk-body">
-        You should give a reason and also include:
+        You should give a brief reason and include:
       </div>
       <ul class="govuk-list govuk-list--bullet">
 <li>the case reference</li>
